# zinc

./: Cargo.toml
zandbox/: Cargo.toml
zandbox/src/controller/contract/call/: mod.rs
zargo/: Cargo.toml
zinc-manifest/: Cargo.toml
zinc-zksync/: Cargo.toml
