[workspace]
members = [
    # Members, topologically sorted
    
    # no dependencies
    "zinc-const",

    # depends on:
    # - zinc-const
    "zinc-math",

    # depends on:
    # - zinc-const
    # - zinc-math
    "zinc-lexical",
    
    # depends on:
    # - zink-const
    # - zink-lexical
    "zinc-syntax",

    # depends on:
    # - zink-const
    "zinc-manifest",

    # depends on:
    # - zinc-const
    "zinc-logger",

    # depends on:
    # - zinc-const
    "zinc-source",

    # depends on:
    # - zinc-const
    # - zinc-math
    "zinc-build",

    # depends on:
    # - zinc-const
    # - zinc-math
    # - zinc-lexical
    # - zinc-syntax
    # - zinc-manifest
    # - zinc-logger
    # - zinc-source
    # - zinc-build
    "zinc-compiler",

    # depends on:
    # - zinc-const
    # - zinc-math
    # - zinc-build
    # "zinc-zksync",

    # depends on:
    # - zinc-const
    # - zinc-math
    # - zinc-logger
    # - zinc-build
    # - zinc-zksync
    # "zinc-vm",
    
    # depends on:
    # - zinc-const
    # - zinc-manifest
    # - zinc-build
    # - zinc-compiler
    # - zinc-zksync
    # - zinc-vm
    # "zinc-tester",

    # depends on:
    # - zinc-math
    # - zinc-manifest
    # - zinc-logger
    # - zinc-zksync
    # "zargo",

    # depends on:
    # - const
    # - math
    # - logger
    # - build
    # - zksync
    # - vm
    # "zandbox",
]

exclude = [
]
