[package]
name = "zinc-manifest"
version = "0.2.0"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc project manifest file"

[dependencies]
failure = "0.1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

zinc-const = { path = "../zinc-const" }
